fix flex wrap

--- a/src/components/statistics/stats.module.css
+++ b/src/components/statistics/stats.module.css
@@ -47,6 +47,7 @@ ul {
 
 .stat_list{
 display: flex;
+flex-wrap: wrap;
 width: 70%;
 margin: 0 auto 50px auto;
 }
